# OctoBot

./: .env.example  .flake8  .gitignore  .octobot_setup_complete  .pre-commit-config.yaml  Dockerfile  HARDENING_SUMMARY.md  Makefile  README.md  SetupOctoBot.bat  UpdateFile.bat  UpdateGitHub.bat  UpdateLocalFolder.bat  pyproject.toml  requirements.txt  utils_yaml.py
.github/workflows/: ci.yml  docs.yml
actions/: file_manager.py  sandbox_runner.py  web_retriever.py
ai_brain/: README.md  requirements.txt
chat_unreal/: README.md  __init__.py  config.py
config/: model_manifest.json  scan_exclusions.yaml  settings.yaml
connectors/: __init__.py  unreal_bridge.py  web_crawler.py
docs/: ARCHITECTURE.md  CHANGELOG.md  HARDENING_NOTES.md  HUMAN_APPROVAL.md  PROPOSAL_CYCLE.md  SAFETY_POLICY.md  VENTURE_GUIDE.md  architecture.md  developer_guide.md  index.md  laws.md
economy/: ledger.py
engineers/: analyzer_agent.py  code_writer_agent.py  documentor_agent.py  tester_agent.py
entrepreneurs/: __init__.py  base_agent.py  marketer_agent.py  optimizer_agent.py  sim_agent.py  venture_agent.py  writer_agent.py
government/: __init__.py  compiler.py  evaluator.py  models.py  orchestrator.py  presenter.py  proposal_manager.py  proposals.py  registry.py  sandbox.py  updater.py  worker.py
interface/: api_server.py  cli.py  dashboard.py
laws/: __init__.py  audit.py  constitution.yaml  economy_rules.yaml  enforcement.py  static_checks.py  validator.py
memory/: __init__.py  analytics.py  database.py  db.py  embeddings.py  history_logger.py  logger.py  recall.py  reporter.py  utils.py
octobot/: __init__.py
octobot/core/: main.py  (+8 more)
orchestrator/: evaluator.py  main_controller.py  task_planner.py
reasoning/: local_llm_client.py  openai_client.py  reflection_engine.py  symbolic_logic.py
refactor_output/: MANIFEST.md  README.md
safety/: audit_log.py  human_review.py  rules.py
scripts/: bootstrap.py  migrate_coverage_units.py  package_release.py  setup_env.py
tests/: conftest.py  test_analyzer.py  test_analyzer_filter.py  test_auth.py  test_cli.py  test_connector_hardening.py  test_coverage_normalization.py  test_dashboard.py  test_domain_validation.py  test_engineers.py  test_events.py  test_full_cycle.py  test_government.py  test_law_enforcement.py  test_laws.py  test_local_llm_client.py  test_memory.py  test_orchestrator.py  test_presenter.py  test_proposal_cycle.py  test_proposal_manager.py  test_proposals.py  test_registry.py  test_sandbox.py  test_task_planner.py  test_unreal_bridge.py  test_validator.py  test_venture_agent.py
utils/: __init__.py  logger.py  settings.py
ventures/: __init__.py
website/: app.py  deploy.py
(+92 files in other folders)
