[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "self-coding-bot"
version = "0.1.0"
description = "Governed self-analysis and proposal system"
authors = [{name = "OctoBot"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "fastapi>=0.110",
    "jinja2>=3.1",
    "uvicorn>=0.27",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "flake8>=6.1",
    "rich>=13.7",
]

[tool.pytest.ini_options]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.coverage.run]
branch = true
source = ["octobot"]

[tool.coverage.report]
fail_under = 90
show_missing = true
