[tool.poetry]
name = "octobot"
version = "1.0.0"
description = "Governed self-analysis and proposal system for constitutional engineering"
authors = ["OctoBot Engineering Guild <engineering@octobot.dev>"]
readme = "README.md"
packages = [{ include = "octobot" }]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1"
fastapi = "^0.111"
jinja2 = "^3.1"
uvicorn = { version = "^0.30", extras = ["standard"] }
structlog = "^23.3"
httpx = "^0.27"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pytest-cov = "^4.1"
hypothesis = "^6.99"
mypy = "^1.9"
flake8 = "^7.0"
black = "^24.4"
isort = "^5.13"
pre-commit = "^3.7"
safety = "^3.1"
types-pyyaml = "^6.0"
types-requests = "^2.31"

[tool.poetry.scripts]
octobot = "octobot.interface.cli:main"

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "venv"

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["octobot"]

[tool.pytest.ini_options]
addopts = ""
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["octobot.core", "octobot.laws", "octobot.agents"]
omit = [
    "octobot/core/updater.py",
    "octobot/interface/*",
    "octobot/connectors/*",
    "octobot/memory/*",
    "octobot/utils/*",
    "octobot/__init__.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
strict_optional = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
implicit_optional = false

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".venv",
]

[build-system]
requires = ["poetry-core>=1.7"]
build-backend = "poetry.core.masonry.api"
